HelloUltraviolet/Fixtures/RejectedSource/FFI/NullResultWellFormedness/Source/Main.uv
//! Rejected FFI specimen for null_result on a non-nullable return type.

extern "C" {
    public procedure importedNullResult(value: i32) -> i32
        |: @foreign_ensures(@null_result: true)
}
